    dialog.
  - (bugfix in SEE) Use frame->name instead of target avoiding
    possible segfault.
  - (bugfix 957) crash within js_Interpret: cx->fp points to freed
    memory
  - (bugfix 920) assertion priority >= prev_priority failed: queue is
    not sorted
  - (bugfix 968) assertion width > 0 failed in copy_chars called from
    justify_line
* Already backported to a previous release but not listed there:
  - (enhancement) Activate link only when onClick returns true.
    Fixed bug 786 in ELinks 0.11.2.
  - when the configure script cleans old object files, this no longer
    causes it to loop.  Commit 564b67883b189a05839bcd2a30d8d4c6eb89c66d
    in ELinks 0.11.1.
  - don't include <sys/param.h> for MIN and MAX because it may interfere with
    CONFIG_IPV6 on Linux.  Commit 63797ae9b331efd91be27512bd9d5b2e2ff74741
    in ELinks 0.11.1.
  - Debian bug 400872: include <sys/types.h> for off_t.
    (Related to bug 936 but not the same.)
    Commit 135a79a3c309af36cf963f1d3c34b07f296fa2f7 in ELinks 0.11.3.
  - bug 107: recognize "localhost" in file: URIs.  Cannot reproduce in
    earlier versions.
  - fix compilation under gcc 4.x. Backported from gentoo portage.
    Commit bcabd8b7951f3319199811088e607501296ee573 in ELinks 0.11.3.
  - enhancement: avoid compilation of vernum.c in 'make install'
  - bug 991: quote spaces in file names passed to external handlers
* Reverted changes:
  - (new feature) document.write, reverted in
    2c087e52e74528a720621186b91880463e039d50
  - (enhancement) restore Linux console mode (UTF-8 or not), reverted
    in 10d72cae7eafa6b90db1c8f303deb200555734c2
  - (enhancement) wcwidth, reverted in
    d050cb67aa37390ab938b0a308c7541f19578506
  - (new feature) Let plain text change colors with ESC [ 31 m or
    similar control sequences, reverted in
    2a6125e3d0407b588eb286d4d0ff5c98c23ebda9
  - (enhancement) Support for pasting from GNU screen clipboard,
    reverted in 763f03f146cc1391b303c8074556f0ddea1e3c7a
* Unimportant changes: 