@@ -6,6 +6,19 @@
 #include "config.h"
 #endif
 
+/* PyString_AsStringAndSize() takes a Py_ssize_t * in Python 2.5 but
+ * an int * in Python 2.4.  To be compatible with both, ELinks uses
+ * Py_ssize_t and defines it here if necessary.  The public-domain
+ * PEP 353 <http://www.python.org/dev/peps/pep-0353/> suggests the
+ * following snippet, so we can use the Py_ssize_t name even though
+ * Python generally reserves names starting with "Py_".  */
+#if PY_VERSION_HEX < 0x02050000 && !defined(PY_SSIZE_T_MIN)
+typedef int Py_ssize_t;
+#define PY_SSIZE_T_MAX INT_MAX
+#define PY_SSIZE_T_MIN INT_MIN
+#endif
+/* End of PEP 353 snippet.  */
+
 struct module;
 
 extern struct session *python_ses;
